<resources>
    <string name="app_name">BitScan</string>
    <string name="welcomeText">Welcome Back!</string>
    <!--    <string name="default_web_client_id">ComingSoon</string>-->

    //Google Services
<!--    <string name="default_web_client_id" translatable="false">824996244177-im5fh9u6jgtgk8uhuch0rur14qfp87mv.apps.googleusercontent.com</string>-->
<!--    <string name="firebase_database_url" translatable="false">https://bitscan-36049.firebaseio.com</string>-->
<!--    <string name="gcm_defaultSenderId" translatable="false">824996244177</string>-->
<!--    <string name="google_api_key" translatable="false">AIzaSyBTfX2TQs5k8Co-aaisvwXeU3X9jaPVOLk</string>-->
<!--    <string name="google_app_id" translatable="false">1:824996244177:android:5ef39079fb71c46418b3f0</string>-->
<!--    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyBTfX2TQs5k8Co-aaisvwXeU3X9jaPVOLk</string>-->
<!--    <string name="google_storage_bucket" translatable="false">bitscan-36049.appspot.com</string>-->
<!--    <string name="project_id" translatable="false">bitscan-36049</string>-->
    <string name="finding_rect">Use a dark background</string>
    <string name="camera_activity_permission_denied_toast">Camera Access Denied</string>
    <string name="move_closer">Move Closer</string>
    <string name="move_away">Move Away</string>
    <string name="adjust_angle">Adjust Camera Angle</string>
    <string name="hold_still">Hold the device still</string>
    <string name="review_empty">Clicked document images will appear here!</string>
    <string name="page_number">Page Number</string>
    <string name="dashboard_document_name">Document Name</string>
    <string name="dashboard_document_date">dd/mm/yyyy</string>
    <string name="delete_document">Delete Document</string>
    <string name="dialog_delete_text">DELETE</string>
    <string name="dialog_cancel_text">CANCEL</string>
    <string name="dialog_text">Are you sure you want to delete the document?</string>
    <string name="new_document">New Document</string>
    <string name="save_pdf">Save PDF</string>
    <string name="saving_pdf">Saving PDF</string>
    <string name="appname">Bitscan</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>
    <string name="rationale_external">This app needs access to your gallery to select images.</string>
    <string name="rationale_sms">This app needs access to your sms to read all your great messages.</string>
    <string name="rationale_contact">This app needs access to your contact to know you better</string>
    <string name="returned_from_app_settings_to_activity">
        Returned from app settings to MainActivity with the following permissions:
        \n\nCamera: %s
        \nLocation: %s
        \nSMS: %s
        \nContacts: %s
    </string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="sms">SMS</string>
    <string name="contacts">Contacts</string>
</resources>