<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_delete_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/dialog_header_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/red" />

    <TextView
        android:id="@+id/dialog_header_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/delete_document"
        android:textColor="@color/red"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/dialog_header_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialog_header_icon"
        app:layout_constraintTop_toTopOf="@id/dialog_header_icon" />

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ubuntu"
        android:includeFontPadding="false"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/dialog_text"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/dialog_header_text" />

    <TextView
        android:id="@+id/dialog_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:padding="8dp"
        android:text="@string/dialog_delete_text"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_text" />

    <TextView
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="8dp"
        android:text="@string/dialog_cancel_text"
        android:textColor="@color/white"
        android:fontFamily="@font/ubuntu_bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_delete_btn"
        app:layout_constraintTop_toBottomOf="@id/dialog_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>