<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FadedBlack"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/reorder_top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/reorder_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/reorder_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@id/reorder_toolbar"
            android:layout_alignBottom="@id/reorder_toolbar"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/ic_back" />

        <ImageView
            android:id="@+id/reorder_add"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_alignTop="@id/reorder_toolbar"
            android:layout_alignBottom="@id/reorder_toolbar"
            android:layout_marginStart="55dp"
            android:layout_marginBottom="5dp"
            app:srcCompat="@drawable/ic_page" />

        <TextView
            android:id="@+id/reorder_done"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignTop="@id/reorder_toolbar"
            android:layout_alignBottom="@id/reorder_toolbar"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/ubuntu_bold"
            android:gravity="center"
            android:text="@string/save_pdf"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_document_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reorder_top_bar"
        android:visibility="gone">

        <EditText
            android:id="@+id/reorder_document_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="10dp"
            android:background="@null"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:hint="@string/new_document"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/documentNameHint"
            android:textSize="23sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reorder_empty_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/reorder_top_bar"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="300dp"
            android:src="@drawable/ic_emptyscreenillustration1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/review_empty"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reorder_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_document_name"
        android:visibility="gone"
        tools:listitem="@layout/rv_layout" />

    <LinearLayout
        android:id="@+id/reorder_progress_circular"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reorder_top_bar">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/savePDF_progress_circular"
        android:layout_width="180dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reorder_top_bar">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:text="@string/saving_pdf"
            android:textColor="@color/colorAccent"
            android:textSize="22sp" />

    </LinearLayout>

</RelativeLayout>